--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "sequelize": "^4.37.6",
+    "sqlite3": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
