Added CRUD to controller

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "describe": true,
     "it": true,
     "expect": true,
+    "td": true,
     "request": true,
     "beforeEach": true,
     "app": true
