Created contract tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
     "td": true,
     "request": true,
     "beforeEach": true,
-    "app": true
+    "app": true,
+    "Joi": true,
+    "joiAssert": true
   }
 }
