--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "http-status": "^1.0.1",
     "sequelize": "^4.37.6",
     "sqlite3": "^4.0.0"
   },
