--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "http-status": "^1.0.1",
+    "jwt-simple": "^0.5.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^4.37.6",
     "sqlite3": "^4.0.0"
   },
